# redflag-ex1-analyst

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  analyst_note.txt  app_redteam.py  bayesian_risk_priors.py  boilerplate_filter.py  document_loader.py  pyproject.toml  redflag_engine.py  requirements.txt  run_redflag.py
.github/workflows/: ci.yml
examples/: analyst_note_clean.txt  analyst_note_regulatory.txt  analyst_note_risky.txt
failure_cases/: 01_defamation.txt  02_mnpi_leakage.txt  03_hallucination.txt
tests/: __init__.py  conftest.py  test_bayesian_priors.py  test_boilerplate_filter.py  test_document_loader.py  test_integration.py  test_redflag_engine.py
use_cases/: 01_earnings_preview.txt  02_expert_network.txt  03_regulatory_rumor.txt
